--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,8 @@
-# Application Name
 spring.application.name=vehicle-service
-
-# Database Configuration (H2 In-Memory)
 spring.datasource.url=jdbc:h2:mem:vehicledb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-
-# H2 Console (Access via localhost:8080/h2-console)
 spring.h2.console.enabled=true
-
-# JPA / Hibernate
+spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
