--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: Java CI/CD with Maven
 
 on:
   push:
@@ -7,17 +7,35 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  # JOB 1: BUILD AND TEST
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
           cache: 'maven'
+
       - name: Grant execute permission for mvnw
         run: chmod +x mvnw
-      - name: Build with Maven
-        run: ./mvnw clean verify
+
+      - name: Run Tests & Build
+        run: ./mvnw clean package
+
+      - name: Upload JAR Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: vehicle-service-jar
+          path: target/*.jar
+          retention-days: 5
+
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: target/surefire-reports/*.xml
